critical-error: fix missing padding in popup

--- a/ui/css/errors.scss
+++ b/ui/css/errors.scss
@@ -1,6 +1,5 @@
 .critical-error {
   max-width: 600px;
-  margin: 20px auto 0;
   border-radius: 4px;
   border-left: #f66a0a 4px solid;
   background-color: rgba(255, 211, 61, 0.1);
@@ -9,6 +8,11 @@
   padding: 12px 12px 12px 8px;
   gap: 16px;
   line-height: 24px;
+
+  &__container {
+    padding: 20px;
+    margin: 0 auto;
+  }
 
   &__icon {
     color: var(--color-error-default);
